--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "npx nodemon --exec ts-node src/index.ts",
-        "typeorm":"npx ts-node ./node_modules/typeorm/cli.js"
+        "dev": "npx nodemon --exec ts-node --files src/index.ts",
+        "typeorm": "npx ts-node ./node_modules/typeorm/cli.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcrypt": "^3.0.1",
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.11",
         "nodemon": "^2.0.7",
         "ts-node": "^9.1.1",
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "@types/jsonwebtoken": "^8.5.1",
+        "bcrypt": "^5.0.1",
         "express": "^4.17.1",
+        "js": "^0.1.0",
+        "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "pg": "^8.5.1",
         "reflect-metadata": "^0.1.13",
